# DNS_Load_Balancer

./: BUILD.md  CMakeLists.txt  INTEGRATION_SUMMARY.md  QUICKSTART.md  README.md  README_DNSDIST.md  UBUNTU_CHEATSHEET.md  build_and_run.sh  setup_ubuntu.sh  test_load_balancing.sh
ext/luawrapper/: meson.build
ext/luawrapper/include/: LuaContext.hpp
load_balancing/: channel.cc  channel.hh  circular_buffer.hh  dns.hh  dnsdist-async.cc  dnsdist-async.hh  dnsdist-backend.cc  dnsdist-backend.hh  dnsdist-lbpolicies.cc  dnsdist-lbpolicies.hh  dnsdist-lua.cc  dnsdist-lua.hh  dnsdist-protocols.hh  dnsdist-rings.hh  dnsdist.cc  dnsdist.hh  dnsname.hh  iputils.hh  lock.hh  misc.hh  namespaces.hh  pdnsexception.hh  qtype.hh  stat_t.hh
src/config/: config.json  config_loader.cpp  config_loader.h  health_checker.cpp  health_checker.h  main.cpp
src/load_balancer/: dnsdist_lb_core.h
src/main/: dns-idk.cpp  dnsbalancer.cpp  main_dnsdist_lb.cpp
